<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:background="@color/back_color"
        tools:context=".fragment.LeftFragment">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
        <View style="@style/HourLine"/>
        <TextView
                android:id="@+id/tvThinning"
               style="@style/LeftText"
                android:background="@color/theme_color"
                android:text="@string/local_penetration" />
        <View style="@style/HourLine"/>
        <TextView
                android:id="@+id/tvPressure"
                style="@style/LeftText"
                android:text="@string/straight" />
        <View style="@style/HourLine"/>
        <TextView
                android:id="@+id/tvWeldingLine"
                style="@style/LeftText"
                android:text="@string/circular_line"/>
        <View style="@style/HourLine"/>
    </LinearLayout>

</LinearLayout>